# cpu-tools

./: .gitignore  CMakeLists.txt  README.md
include/: cpu_tools.h
python/: pycputools.cxx
resources/scripts/: parse-lm-sensors.py  run-test.py  watercool.py  watercool.service
src/: clock_speed.c  cpu_temp.c  cpu_tools.c  cpu_tools.cxx  read_cpu_clock.c  read_cpu_clock.cxx  read_cpu_temp.c  read_cpu_temp.cxx
